methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:4: error: Boolean does not take parameters
    forward(stepCount);
           ^MethodsArgs:7: error: not found: value stepcount
    backward(stepcount);
             ^